GNOME Bugzilla – Bug 772839
When opening a wayland session, screen locks immediately
Last modified: 2016-10-17 12:00:24 UTC
When opening a wayland session, screen starts to dim as screen locks immediately, moving the mouse cancels the action, but it's annoying.
Can you replace your gnome-settings-daemon executable with a script that calls the real (renamed) executable with the --debug argument so that we can see what's going on in the log output ?
Created attachment 337573 [details] gnome-settings-daemon log with debug enabled
I noticed that this doesn't not occur right after boot. Presumably it's the gnome-settings-daemon attached to gdm that times-out and triggers the screensaver when a new session is opened because AFAIK it's sharing the same wayland display. Could it be something like that?
I was able to reproduce now after enabling session idle (which I usually keep disabled).
Created attachment 337662 [details] [review] MetaIdleMonitorNative: initialize last event timestamp If this isn't initialized and an idle watch gets instanced before meta_idle_monitor_native_reset_idletime() gets called, that idle watch would get triggered as soon as we hit the main loop. This was causing gnome-session to go into idle mode at session start thus making gnome-shell lock the screen. In the past this bug was being masked by either logind emiting session active signals or a stray input event making it through at startup. -- I suppose this was uncovered by a logind behavior change but I'm not sure.
Review of attachment 337662 [details] [review]: LGTM
Review of attachment 337662 [details] [review]: Works for me too.
Attachment 337662 [details] pushed as 280e297 - MetaIdleMonitorNative: initialize last event timestamp